tests/functional/lang/eval-fail/using-set-as-attr-name.err.exp
error:
       … while evaluating an attribute name
         at /pwd/lang/eval-fail/using-set-as-attr-name.nix:7:8:
            6| in
            7| attr.${key}
             |        ^
            8|

       error: expected a string but found a set: { }
       at /pwd/lang/eval-fail/using-set-as-attr-name.nix:7:8:
            6| in
            7| attr.${key}
             |        ^
            8|
